--- a/MinMe.macOS/packages.config
+++ b/MinMe.macOS/packages.config
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-    <package id="Xamarin.Forms" version="3.4.0.1009999"  />
-
-    <package id="Xamarin.Essentials" version="0.6.0-preview" />
-    <package id="FSharp.Core" version="4.5.2" />
-    <package id="Fabulous.Core" version="0.30.0" />
-    <package id="Fabulous.CustomControls" version="0.30.0" />
-    <package id="Newtonsoft.Json" version="11.0.2" />
+  <package id="Fabulous.Core" version="0.30.0" />
+  <package id="Fabulous.CustomControls" version="0.30.0" />
+  <package id="FSharp.Core" version="4.6.0" targetFramework="xamarinmac20" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="xamarinmac20" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Essentials" version="1.0.1" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Forms" version="3.4.0.1029999" targetFramework="xamarinmac20" />
 </packages>
