--- a/MinMe/MinMe.fsproj
+++ b/MinMe/MinMe.fsproj
@@ -9,13 +9,13 @@
     <Compile Include="MinMe.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
-    <PackageReference Include="Xamarin.Essentials" Version="0.6.0-preview" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Fabulous.Core" Version="0.30.0" />
     <PackageReference Include="Fabulous.CustomControls" Version="0.30.0" />
     <PackageReference Include="Fabulous.LiveUpdate" Version="0.30.0" />
     <PackageReference Include="FSharp.Core" Version="4.5.2" />
-    <PackageReference Update="FSharp.Core" Version="4.5.2" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Update="FSharp.Core" Version="4.6.0" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 </Project>
