--- a/src/MinMe/MinMe.fsproj
+++ b/src/MinMe/MinMe.fsproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
@@ -7,16 +8,5 @@
     <Compile Include="OpenXml.fs" />
     <Compile Include="MinMe.fs" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
-    <PackageReference Include="Fabulous.Core" Version="0.31.0" />
-    <PackageReference Include="Fabulous.CustomControls" Version="0.31.0" />
-    <PackageReference Include="Fabulous.LiveUpdate" Version="0.31.0" />
-    <PackageReference Include="FSharp.Core" Version="4.5.2" />
-    <PackageReference Update="FSharp.Core" Version="4.6.1" />
-    <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 -->
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.0" />
-  </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
