--- a/src/MinMe.macOS/MinMe.macOS.fsproj
+++ b/src/MinMe.macOS/MinMe.macOS.fsproj
@@ -111,7 +111,7 @@
     </When>
   </Choose>
   <Choose>
-    <When Condition="($(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0') Or ($(TargetFrameworkIdentifier) == 'Xamarin.Mac')">
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0'">
       <ItemGroup>
         <Reference Include="Fabulous.Core">
           <HintPath>..\..\packages\Fabulous.Core\lib\netstandard2.0\Fabulous.Core.dll</HintPath>
@@ -122,7 +122,7 @@
     </When>
   </Choose>
   <Choose>
-    <When Condition="($(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0') Or ($(TargetFrameworkIdentifier) == 'Xamarin.Mac')">
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0'">
       <ItemGroup>
         <Reference Include="Fabulous.CustomControls">
           <HintPath>..\..\packages\Fabulous.CustomControls\lib\netstandard2.0\Fabulous.CustomControls.dll</HintPath>
