macOS app with C# storyboard UI

--- a/src/MinMe.Core/MinMe.Core.fsproj
+++ b/src/MinMe.Core/MinMe.Core.fsproj
@@ -1,16 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
-    <AssemblyName>MinMe.App</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Core.fs" />
+    <Compile Include="Model.fs" />
     <Compile Include="OpenXml.PowerPoint.fs" />
     <Compile Include="OpenXml.Word.fs" />
     <Compile Include="Agents.fs" />
-    <Compile Include="MinMe.fs" />
+    <None Include="paket.references" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
