--- a/src/MinMe.Core/MinMe.Core.fsproj
+++ b/src/MinMe.Core/MinMe.Core.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Helpers.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="OpenXml.PowerPoint.fs" />
     <Compile Include="OpenXml.Word.fs" />
